add property swagger
